--- a/public/pages/examples/e-commerce.html
+++ b/public/pages/examples/e-commerce.html
@@ -818,12 +818,12 @@
 
               <div class="mt-4">
                 <div class="btn btn-primary btn-lg btn-flat">
-                  <i class="fas fa-cart-plus fa-lg mr-2"></i> 
-                  Add to Cart
+                  <i class="fas fa-cart-plus fa-lg mr-2"></i>
+                  Đặt mua hàng
                 </div>
 
                 <div class="btn btn-default btn-lg btn-flat">
-                  <i class="fas fa-heart fa-lg mr-2"></i> 
+                  <i class="fas fa-heart fa-lg mr-2"></i>
                   Add to Wishlist
                 </div>
               </div>
